Mon Nov  8 09:36:55 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* acinclude.m4: Improve quoting to stop aclocal complaining. Improve
	  indentation. Get rid of unnecessary changequote().

Sun Nov  7 16:07:26 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_wait): Close pipeline output before
	  reaping processes, so that writing processes get SIGPIPE.

Sun Nov  7 16:05:08 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_wait): Fix active process debugging
	  output to include processes without statuses.

Sun Nov  7 16:01:26 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* src/compression.c (decompress): Invalidate file_fd after closing
	  it.

Sun Nov  7 15:31:18 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* src/man.c (compare_candidates): Compare extensions' positions in
	  section_list at the same time as sections, but do the lexical
	  comparison fallback after comparing ids; this restores the
	  intended ability to use SECTIONS to move extensions out of order
	  with respect to their parent sections without breaking the earlier
	  workaround for Debian bug #204249.

Thu Jul 22 14:46:30 BST 2004  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (testmandirs): Always scan directory if last
	  is 0 (i.e. creating) to avoid problems on systems with badly
	  broken clocks set before the epoch.

Mon Jun 28 03:56:56 BST 2004  Colin Watson  <cjwatson@debian.org>

	* src/man.c (man): Free candidate list after displaying it.

Mon Jun 28 01:19:45 BST 2004  David Weinehall  <tao@debian.org>

	* tools/mkcatdirs: Replace XSIish uses of 'test' with more portable
	  code.

Thu Apr  1 05:10:50 BST 2004  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (charset_table): Use the latin1 device for
	  ISO-8859-15, even though that isn't exactly right.

Thu Apr  1 04:56:02 BST 2004  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (get_page_encoding, get_standard_output_encoding):