@@ -1,3 +1,9 @@
+Mon Nov  8 09:40:07 GMT 2004  Colin Watson  <cjwatson@debian.org>
+
+	* lib/hashtable.c (null_hash_free): No-op hash_free_ptr provider,
+	  for convenience.
+	* lib/hashtable.h (null_hash_free): Prototype it.
+
 Mon Nov  8 09:36:55 GMT 2004  Colin Watson  <cjwatson@debian.org>
 
 	* acinclude.m4: Improve quoting to stop aclocal complaining. Improve
